--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,24 @@
 body {
-  background-color: black;
-  overflow: hidden;
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    border: 1px red solid;
+    background-color: black;
+    height: 99dvh;
+    color: white;
+    text-shadow: 2px 2px 2px red;
+    background-image: url('/hackster.svg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: 50%;
+    backdrop-filter: blur(5px);
+    background-size: auto;
 }
+
+pre {
+    font-size: x-large;
+    margin: 1%;
+}
+
+
+
