Added Whoami Command

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     width: 86dvw;
     height: 3dvh;
     color: white;
-    background-color: black;
+    background-color: transparent;
     
     outline: none;
     border: none;
